[tool.poetry]
name = "cat_squirrel"
version = "0.1.0"
description = ""
authors = ["Julien Lhermitte <julien@useriver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "^2.3.0"
Pillow = "^8.2.0"
jupyter = "^1.0.0"
fastbook = "^0.0.16"
voila = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
